--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,10 +12,9 @@
     <div class="message-form__push-timing">
       チャンネル登録して
       <%= m.fields_for :push_timing do |p| %>
-        <%= p.select :in_x_days, x_days_after %>日後の
-        <%= p.time_select :time, {prompt: false, ignore_date: true, include_seconds: true, minute_step: 1} %>
+        <%= p.number_field :in_x_days, min: 0, max: 100, value: 1 %>日後の
+        <%= p.time_field :time, value: "10:00" %>に送信する
       <% end %>
-      に送信する
     </div>
 
     <label for="message_message" class="message-form__title-message">メッセージ *</label>
