channel一覧をデザインする

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,2 +1,17 @@
+$white: white;
+$black: black;
+$weakgray: #e7e9ed;
+$stronggray: #444444;
+$lightsilver: #cfcfcf;
+$gainsboro: gainsboro;
 $slackpurple: #34163b;
+$slacklightpurple: #611f69;
+$slackblue: #1264a3;
+$slacklightblue: #31beeb;
+
+$slackpink: #ce375c;
+$slackgreen: #5bb281;
+
+$littlesmaller: 0.9rem;
+
 $lpwidth: 1200px;
