--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,10 +1,21 @@
 <div class="message">
   <div class="message__channel-title">
-    <%= link_to "<", workspace_channel_path(@workspace, @channel), class: "back" %>
+    <%= link_to workspace_channel_path(@workspace, @channel), class: "back" do %>
+      <i class="fas fa-chevron-left"></i>
+    <% end %>
+
     <h3 class="message__channel-name">
       # <%= @channel.name %>
     </h3>
-    <%= link_to "≡", sessions_destroy_path, class: "menu" %>
+
+    <div class="sign-out">
+      <i class="fas fa-ellipsis-v sign-out__icon"></i>
+      <ul class="sign-out__menu">
+        <li class="sign-out__list">
+          <%= link_to "ログアウト", sessions_destroy_path, class: "sign-out__link" %>
+        </li>
+      </ul>
+    </div>
   </div>
   <%= render 'form', workspace: @workspace, channel: @channel, message: @message %>
 </div>
