ファイル名を最適化する

--- a/app/views/homes/_features.html.slim
+++ b/app/views/homes/_features.html.slim
@@ -13,7 +13,7 @@
     | 合計の既読数、送信数が分かります。
 
 .lp__feature
-  = image_tag "speed-optimisation.svg", class: "lp__feature-image"
+  = image_tag "speed-login.svg", class: "lp__feature-image"
   h3.lp__feature-title
     | アカウント登録は不要：
   p.lp__feature-desc
