--- a/app/views/homes/_how_to_use.html.slim
+++ b/app/views/homes/_how_to_use.html.slim
@@ -8,7 +8,7 @@
         | step 1
       .lp-how-to-use__step-desc
         | 下の「sign in with slack」ボタンからあなたのslackアカウントとslack de stepを連携します（無料！）
-    = image_tag "top_square.jpeg", class: "lp-how-to-use__step-image"
+    = image_tag "coordination.jpeg", class: "lp-how-to-use__step-image"
 
   .lp-how-to-use__step
     = image_tag "channels.png", class: "lp-how-to-use__step-image"
