--- a/app/views/shared/overlay/_commit_message.html.erb
+++ b/app/views/shared/overlay/_commit_message.html.erb
@@ -1,7 +1,7 @@
 <div id="overlay-commit-message">
   <div class="modal">
     <div class="modal__image">
-      <%= image_tag "check_1.png" %>
+      <%= image_tag "check.png" %>
     </div>
     <div class="modal__title">メッセージを登録しました</div>
     <div class="modal__button">
