--- a/app/views/homes/_flash.html.slim
+++ b/app/views/homes/_flash.html.slim
@@ -1,4 +1,4 @@
 - flash.each do |k, v|
-  div[class="lp__flash #{'lp__flash-login-failed' if k == 'login_failed'}"]
+  div[class="lp__flash #{"lp__flash-login-failed" if k == "login_failed"}"]
     .lp__flash-text
       = v
