--- a/app/views/messages/new.html.slim
+++ b/app/views/messages/new.html.slim
@@ -8,4 +8,4 @@
 
     = render partial: "shared/icon/sign_out"
 
-  = render 'form', channel: @channel, message: @message
+  = render "form", channel: @channel, message: @message
