LPデザインを改良する

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -88,11 +88,12 @@
     margin-top: 0;
   }
   &__step-text {
-    width: 40%;
+    width: 35%;
+    font-size: 110%;
   }
   &__step-image {
     width: 50%;
-    border-radius: 20px;
+    border-radius: 400px;
   }
   &__cta {
     text-align: center;
