--- a/app/views/homes/_how_to_use.html.slim
+++ b/app/views/homes/_how_to_use.html.slim
@@ -8,10 +8,10 @@
         | step 1
       .lp-how-to-use__step-desc
         | 下の「sign in with slack」ボタンからあなたのslackアカウントとslack de stepを連携します（無料！）
-    = image_tag "coordination.jpeg", class: "lp-how-to-use__step-image"
+    = image_tag "step_1.png", class: "lp-how-to-use__step-image"
 
   .lp-how-to-use__step
-    = image_tag "channels.png", class: "lp-how-to-use__step-image"
+    = image_tag "step_2.png", class: "lp-how-to-use__step-image"
 
     .lp-how-to-use__step-text
       h3.lp-how-to-use__step-title
@@ -28,7 +28,7 @@
       .lp-how-to-use__step-desc
         | メッセージを送りたいタイミングを指定して登録をクリック。もちろんテスト送信もできます！
 
-    = image_tag "message.png", class: "lp-how-to-use__step-image"
+    = image_tag "step_3.png", class: "lp-how-to-use__step-image"
 
   .lp-how-to-use__cta
     h3
