--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,4 +10,5 @@ html
     script[src="https://kit.fontawesome.com/d8eaa23d2b.js" crossorigin="anonymous"]
 
   body
+    == render partial: "shared/ga/google_tag_manager"
     == yield
