アプリのicon、nameをDB保存する

--- a/app/views/channels/_channel_message.html.slim
+++ b/app/views/channels/_channel_message.html.slim
@@ -4,10 +4,10 @@
       = "#{message.push_timing.in_x_days}日後の#{message.push_timing.time.strftime('%H:%M')}"
 
   .channel-message
-    = image_tag(@user_info_profile_image, class: "channel-message__sender-icon")
+    = image_tag(@app_info[:icon_url], class: "channel-message__sender-icon")
     .channel-message-data
       .channel-message-data__sender-name
-        = @user_info_realname
+        = @app_info[:real_name]
 
       .channel-message-data__content
         = simple_format(message.message)
