--- a/app/views/messages/_push_timing.html.slim
+++ b/app/views/messages/_push_timing.html.slim
@@ -5,5 +5,5 @@
     = p.number_field :in_x_days, min: 0, max: 100, class: "message-form__number"
     | 日後の
 
-    = p.time_field :time, class: "message-form__time"
+    = p.time_field :time, class: "message-form__time", step: 300
     | に送信する
