sign inのURL先を変数にする

--- a/app/views/homes/_first_view.html.slim
+++ b/app/views/homes/_first_view.html.slim
@@ -3,7 +3,7 @@
     span
       | "〇日目"の人にメッセージを送る<br />
     | Slack De Step
-  = link_to "https://slack.com/oauth/v2/authorize?client_id=1014153380854.1396596614065&scope=channels:history,channels:join,channels:read,chat:write,files:write,im:history,im:read,team:read,users:read&user_scope=identity.avatar,identity.basic,identity.email,identity.team", class: "lp__sign-in-link" do
+  = link_to "https://slack.com/oauth/v2/authorize?client_id=#{ENV["SLACK_CLIENT_ID"]}&scope=channels:history,channels:join,channels:read,chat:write,files:write,im:history,im:read,team:read,users:read&user_scope=identity.avatar,identity.basic,identity.email,identity.team", class: "lp__sign-in-link" do
     = image_tag "sign_in_with_slack@2x.png", class: "lp__sign-in-image"
 
 = image_tag "maintenance.svg", class: "lp__firstview-image"
