--- a/app/views/shared/overlay/_channels_info.html.slim
+++ b/app/views/shared/overlay/_channels_info.html.slim
@@ -3,7 +3,7 @@
     .modal__title
       | 各チャンネルの人数
     .modal__desc
-      | Slack De Stepをslackに連携してから後に、チャンネルに入ってきた人数です。その人数に対してメッセージが送信されます
+      | チャンネル名の横の数字は、Slack De Stepをslackに連携してから後にチャンネルに入ってきた人数です。その人数に対してメッセージが送信されます
     .modal__button
       button.modal__cancel
         | 戻る
