--- a/app/assets/stylesheets/channels.scss
+++ b/app/assets/stylesheets/channels.scss
@@ -22,6 +22,10 @@
     margin-right: 1rem;
   }
   &__workspace-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 12rem;
   }
   &__about-number-of-people {
     padding: 1rem 1.5rem;
